# simple-faucet-token

./: .gitignore  Cargo.toml  README.md
src/: instructions.rs  lib.rs  state.rs
src/client/: main.rs
tests/: test_faucet.rs
