[package]
name = "simple_token_faucet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-bpf = []

[dependencies]
solana-program = "2.0.7"
borsh = "1.5.1"

[dev-dependencies]
# Only needed for testing (won't be included in production build)
getrandom = { version = "0.1.14", features = ["dummy"] }
solana-sdk = "2.0.7"
solana-program-test = "2.0.7"